crates/tokmd-format/tests/snapshots/snapshot_golden_w54__w54_export_csv_empty.snap
---
source: crates/tokmd-format/tests/snapshot_golden_w54.rs
expression: out
---
path,module,lang,kind,code,comments,blanks,lines,bytes,tokens
