crates/tokmd-format/tests/snapshots/snapshot_golden_w54__w54_lang_md_embedded_collapse.snap
---
source: crates/tokmd-format/tests/snapshot_golden_w54.rs
expression: out
---
|Lang|Code|Lines|Files|Bytes|Tokens|Avg|
|---|---:|---:|---:|---:|---:|---:|
|HTML|700|870|5|21000|7000|174|
|**Total**|700|870|5|21000|7000|174|
