crates/tokmd-format/tests/snapshots/snapshot_golden_w54__w54_lang_md_empty.snap
---
source: crates/tokmd-format/tests/snapshot_golden_w54.rs
expression: out
---
|Lang|Code|Lines|Bytes|Tokens|
|---|---:|---:|---:|---:|
|**Total**|0|0|0|0|
