crates/tokmd-format/tests/snapshots/snapshot_golden_w54__w54_lang_md_many_languages.snap
---
source: crates/tokmd-format/tests/snapshot_golden_w54.rs
expression: out
---
|Lang|Code|Lines|Files|Bytes|Tokens|Avg|
|---|---:|---:|---:|---:|---:|---:|
|Rust|5000|6250|50|150000|40000|125|
|Python|3000|3750|30|90000|24000|125|
|JavaScript|2000|2500|20|60000|16000|125|
|TypeScript|1500|1875|15|45000|12000|125|
|Go|1000|1250|10|30000|8000|125|
|C|800|1000|8|24000|6400|125|
|Shell|400|500|4|12000|3200|125|
|**Total**|13700|17125|137|411000|109600|125|
