crates/tokmd-format/tests/snapshots/snapshot_golden_w54__w54_lang_md_single_language.snap
---
source: crates/tokmd-format/tests/snapshot_golden_w54.rs
expression: out
---
|Lang|Code|Lines|Files|Bytes|Tokens|Avg|
|---|---:|---:|---:|---:|---:|---:|
|Go|300|400|3|9000|3000|133|
|**Total**|300|400|3|9000|3000|133|
